<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="beerfandango.android101.hw2.icelandic.MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answerText"
        android:id="@+id/answerTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/promptText"
        android:id="@+id/promptTextView"
        android:layout_above="@id/answerTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center|bottom"
        android:layout_marginBottom="22dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previousCardText"
        android:id="@+id/previousButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showAnswerText"
        android:id="@+id/toggleAnswer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/answerOff"
        android:textOn="@string/answerOn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextCardText"
        android:id="@+id/nextButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffleDeck"
        android:id="@+id/shuffleDeck"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundText"
        android:id="@+id/toggleSound"
        android:layout_alignLeft="@id/shuffleDeck"
        android:layout_below="@id/shuffleDeck"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOff="@string/soundText"
        android:textOn="@string/soundText" />


</RelativeLayout>
